--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <label for="tinggi">Tinggi (cm):</label>
             <input type="number" id="tinggi" name="tinggi" required><br>
             
-            <label for="pembagi">Pembagi (4000 atau 6000):</label>
+            <label for="pembagi">Pembagi (4000):</label>
             <input type="number" id="pembagi" name="pembagi" required><br>
             
             <label for="tarif">Tarif (Rp):</label>
